<resources>
    <string name="app_name">GetMyDriverCardApp</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="facebook_app_id">240792566614726</string>
    <string name="fb_login_protocol_scheme">fb240792566614726</string>
    <string name="sign_in_facebook">Sign in Facebook</string>
    <string name="sign_in_google">Sign in Google</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="action_download">Download</string>
    <string name="action_clear">Clear</string>
    <string name="custom_crouton_image">Custom crouton imageAttachment</string>
    <string name="capture_at_least_two">Capture at least 2 of the following</string>
    <string name="id_card">ID card</string>
    <string name="driver_license">Driver license</string>
    <string name="prev_card">Previous card</string>
    <string name="id_card_filename">*ID card filename</string>
    <string name="driving_license_filename">*Driving license filename</string>
    <string name="prev_card_filename">Previous driver card filename (if enclosed)</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="pick_photo">Pick</string>
    <string name="spinner_title">Select your request type</string>
    <string name="egn_validity_err">Egn isn\'t valid, please double check it</string>
    <string name="there_are_no_current_requests">There are no current requests</string>
    <string name="egn">EGN</string>
    <string name="birthdate">Birthdate</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="personal_details">Personal details</string>
    <string name="image_attachments">Image attachments</string>
    <string name="send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="my_requests">My Requests</string>
    <string name="new_card_request">New Card Request</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="provide_a_relevant_facial_photo">Provide a relevant facial photo</string>
    <string name="request_status">Request status:</string>
</resources>
