<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.photos.EnclosedAttachmentsPickingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_marginBottom="50dp"
        android:paddingBottom="60dp"
        android:text="@string/capture_at_least_two"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColorLime"
        android:gravity="center" />

    <Button
        android:id="@+id/take_id_pic_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button_cyan"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/id_card" />

    <Button
        android:id="@+id/take_driving_license_pic_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button_cyan"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/driver_license" />

    <Button
        android:id="@+id/take_prev_card_pic_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button_cyan"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/prev_card" />

    <TextView
        android:id="@+id/id_pic_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="30dp"
        android:gravity="center"
        android:text="@string/id_card_filename" />

    <TextView
        android:id="@+id/driving_license_pic_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/driving_license_filename" />

    <TextView
        android:id="@+id/payment_doc_pic_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:text="@string/prev_card_filename" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button_cyan"
        android:layout_margin="8dp"
        android:text="@string/next"
        android:textSize="18sp" />

</LinearLayout>
