<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF424242"
    tools:context=".views.cardrequest.preview.RequestPreviewActivity">

    <LinearLayout
        android:id="@+id/personal_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="?android:attr/progressBarStyle"
            android:visibility="gone" />

        <include
            android:id="@+id/admin_panel"
            layout="@layout/admin_panel"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/personal_details"
            android:textSize="24sp"
            android:textColor="@color/primaryColorLime"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/egn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/middle_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/birthdate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/phone_num_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/attachments_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attachments_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/image_attachments"
                android:paddingBottom="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColorLime"
                android:layout_marginTop="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/applicant_selfie_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/blank_selfie_placeholder"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/applicant_signature_img"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/blank_selfie_placeholder"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/applicant_id_card_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/blank_selfie_placeholder"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/applicant_driving_license_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/blank_selfie_placeholder"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:background="@drawable/round_button_cyan"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>